--- a/src/main/resources/templates/shiyan/lookExpModel.html
+++ b/src/main/resources/templates/shiyan/lookExpModel.html
@@ -106,7 +106,7 @@
                             <th>负责人</th>
                             <th>实验类型</th>
                             <th>课时</th>
-                            <th>实验地址</th>
+<!--                            <th>实验地址</th>-->
                             <th>操作</th>
                         </thead>
                         <tbody>
@@ -117,7 +117,7 @@
                             <td th:text="${list.getM_manager()}"></td>
                             <td th:text="${list.getM_type()}"></td>
                             <td th:text="${list.getClasshour()}"></td>
-                            <td th:text="${list.getM_inurl()}"></td>
+<!--                            <td th:text="${list.getM_inurl()}"></td>-->
                             <td class="td-manage">
                                 <!--                                      <a title="编辑"  onclick="xadmin.open('编辑','班级修改.html')" href="javascript:;">-->
                                 <!--<i class="layui-icon">&#xe642;</i>-->
