07-14-03-Charlie-questions page add filters

--- a/src/main/resources/templates/home_page/index.html
+++ b/src/main/resources/templates/home_page/index.html
@@ -98,6 +98,7 @@
 				<p>旅游大数据虚拟仿真实验教学平台</p>
 				<div class="user-info" th:if="${session.username} == null">
 					<a href="http://tysf.sctu.edu.cn:8071/sso//login?service=http://172.17.55.112:8889/shiro-cas">登陆</a>
+					<a href="/register">注册</a>
 				</div>
 				<div class="user-info" th:if="${session.username} != null">
 					<span th:text="|欢迎你，${session.username} |"></span>
