--- a/src/main/resources/templates/home_page/question.html
+++ b/src/main/resources/templates/home_page/question.html
@@ -43,6 +43,51 @@
 				<div class="current">咨询答疑</div>
 				<div class="crumb">当前位置：<a href="/newsinfo/newslist">首页</a> > 咨询答疑</div>
 			</div>
+			<div class="questions-filters">
+				<div class="filter-row">
+					<div class="filter-name">时 间：</div>
+					<div class="filter-items">
+						<div class="filter-item active">全部</div>
+						<div class="filter-item">近三天</div>
+						<div class="filter-item">近一周</div>
+						<div class="filter-item">近一月</div>
+						<div class="filter-item">近半年</div>
+						<div class="filter-item">半年前</div>
+					</div>
+				</div>
+				<div class="filter-row">
+					<div class="filter-name">课 程：</div>
+					<div class="filter-items">
+						<div class="filter-item active">全部</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+						<div class="filter-item">某课程</div>
+					</div>
+				</div>
+				<div class="filter-row">
+					<div class="filter-name">状 态：</div>
+					<div class="filter-items">
+						<div class="filter-item active">全部</div>
+						<div class="filter-item">已回答</div>
+						<div class="filter-item">未回答</div>
+					</div>
+				</div>
+			</div>
 			<div class="questions">
 				<h2>提问列表</h2>
 				<div class="question" th:each="question:${questionPageInfo.content}">
