--- a/src/main/resources/templates/shiyan/addLastAnswer.html
+++ b/src/main/resources/templates/shiyan/addLastAnswer.html
@@ -119,7 +119,7 @@
 
             <div class="layui-form-item">
                 <div class="layui-input-block">
-                    <a th:href="@{|/shiyan/addLastQuest|}" class="layui-btn layui-btn-primary layui-bg-green">返回</a>
+                    <a th:href="@{|/shiyan/addLastQuest/${arrangeId}|}" class="layui-btn layui-btn-primary layui-bg-green">返回</a>
                     <button class="layui-btn layui-btn-primary layui-bg-green" lay-submit>增加选项</button>
                 </div>
 
