--- a/src/main/resources/templates/shiyan/addLastTest.html
+++ b/src/main/resources/templates/shiyan/addLastTest.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <title>添加模块测试</title>
 
-    <link rel="stylesheet" type="text/css" href="../../static/css/layui.css"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/layui.css}"/>
 
 </head>
 <style type="text/css">
@@ -117,7 +117,7 @@
 
             <div class="layui-form-item">
                 <div class="layui-input-block">
-                    <a href="lookTest.html" th:href="@{|/shiyan/lastTestList|}" class="layui-btn layui-btn-primary">返回</a>
+                    <a href="lookTest.html" th:href="@{|/shiyan/lastTestList/${mId*-1}|}" class="layui-btn layui-btn-primary">返回</a>
                     <button class="layui-btn" lay-submit lay-filter="formDemo">添加题目</button>
                     <a href="lookTest.html" th:href="@{|/shiyan/lastTestList/${mId*-1}|}" class="layui-btn layui-bg-green">添加完成</a>
                 </div>
@@ -181,7 +181,7 @@
 
     </div>
 </div>
-    <script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
+<script th:src="@{/js/layui.all.js}" type="text/javascript" charset="utf-8"></script>
 
     <!--<script>-->
     <!--//Demo-->
