--- a/src/main/resources/templates/shiyan/lookLastTest.html
+++ b/src/main/resources/templates/shiyan/lookLastTest.html
@@ -110,7 +110,7 @@
                                         <td th:text="${Quest.mId}">1</td>
                                         <td th:text="${Quest.questType}">单选</td>
                                         <td class="td-manage">
-                                          <a title="编辑" th:href="@{|/shiyan/updateLastQuest/${Quest.questId}|}">
+                                          <a title="编辑" th:href="@{|/shiyan/updateLastQuest/${Quest.questId}/${arrangeId}|}">
                                             <!--<i class="layui-icon">&#xe642;</i>-->
                                             <button type="layui-btn" class="layui-btn layui-bg-green" >修改</button>
                                           </a>
