--- a/src/main/resources/templates/student/student_examine.html
+++ b/src/main/resources/templates/student/student_examine.html
@@ -45,7 +45,7 @@
                 <form class="layui-form layui-col-space5" th:action="@{/studentManage/toBeReviewd}" method="get">
                     <div class="layui-inline layui-show-xs-block"
                          style="float: right;margin-right: 5%;margin-top: 1.7%;">
-                        <input type="text" name="stu_xuehao" placeholder="请输入学号" autocomplete="off" class="layui-input"
+                        <input type="text" name="stu_xuehao" placeholder="请输入学号或者姓名" autocomplete="off" class="layui-input"
                                th:value="${stu_xuehao}">
                     </div>
                     <div class="layui-inline layui-show-xs-block" style="float: right;margin-top: 1.7%;">
