--- a/src/main/resources/static/new/css/teachers.css
+++ b/src/main/resources/static/new/css/teachers.css
@@ -1,77 +1,25 @@
-.main-area {
-	width: 1200px;
-	margin: 0 auto 30px;
-	min-height: 600px;
-}
-.bar {
-	height: 56px;
-	line-height: 56px;
-	width: 100%;
-	box-sizing: border-box;
-	border-left: 5px solid #215130;
-	margin: 0 0 30px 0;
-	background: #efefef;
-	display: flex;
-	justify-content: space-between;
-}
-.current {
-	font-size: 20px;
-	text-indent: 20px;
-	font-weight: normal;
-}
-.crumb {
-	font-size: 14px;
-	margin-right: 20px;
-}
-.crumb a:hover {
-	color: #215130;
-	text-decoration: underline;
-}
-.teachers {
-	display: flex;
-	flex-wrap: wrap;
-}
-.teacher {
-	width: 500px;
-	height: 220px;
-	overflow: hidden;
-	border: 1px solid #ccc;
-	box-sizing: border-box;
-	padding: 10px;
-	margin: 0 50px 30px;
-}
-.teacher:nth-child(2n) {
-	margin-right: 0;
-}
-.teacher div {
-	width: 140px;
-	height: 100%;
-	box-sizing: border-box;
-	border: 1px solid #dfdfdf;
-	position: relative;
-	float: left;
-	margin-right: 10px;
-	overflow: hidden;
-}
-.teacher img {
-	max-width: 100%;
-	max-height: 100%;
-	position: absolute;
-	left: 50%;
-	bottom: 0;
-	transform: translateX(-50%);
-}
-.teacher h3 {
-	font-size: 18px;
-	font-weight: bold;
-	line-height: 32px;
-}
-.teacher p {
-	font-size: 14px;
-	line-height: 2;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	display: -webkit-box;
-	-webkit-line-clamp: 6;
-	-webkit-box-orient: vertical;
-}
+.main-area{width:1200px;margin:0 auto 30px;min-height:600px;}
+.bar{height:56px;line-height:56px;width:100%;box-sizing:border-box;border-left:5px solid #215130;margin:0 0 30px 0;background:#efefef;display:flex;justify-content:space-between;}
+.current{font-size:20px;text-indent:20px;font-weight:normal;}
+.crumb{font-size:14px;margin-right:20px;}
+.crumb a:hover{color:#215130;text-decoration:underline;}
+.lessions-area{margin:30px 0;}
+.lessions-list{width:1100px;margin:0 auto;}
+.bx-wrapper{margin:0 auto;border:none;box-shadow:none;left:0;}
+.lessions-list .bx-wrapper .bx-prev{left:-50px;}
+.lessions-list .bx-wrapper .bx-next{right:-50px;}
+.reports .bx-wrapper .bx-prev{left:-40px;}
+.reports .bx-wrapper .bx-next{right:-40px;}
+.lession-item{width:170px;box-sizing:border-box;height:50px;border:1px solid #ccc;line-height:48px;text-align:center;font-size:16px;cursor:pointer;border-radius:3px;}
+.lession-item:hover{border-color:#215130;}
+.lession-item.active{border:2px solid #215130;line-height:46px;position:relative;}
+.lession-item.active:before{content:'';position:absolute;right:0;bottom:0;border:8px solid #215130;border-top-color:transparent;border-left-color:transparent;}
+.lession-item.active:after{content:'';width:2px;height:6px;position:absolute;right:2px;bottom:2px;border:1px solid #fff;border-top-color:transparent;border-left-color:transparent;transform:rotate(45deg);}
+.show-bar{width:100%;height:40px;line-height:40px;box-sizing:border-box;background:#f7f7f7;border:1px solid #ccc;border-left:2px  solid #215130;font-size:14px;text-indent:20px;}
+.teachers{display:flex;flex-wrap:wrap;box-sizing:border-box;border:1px solid #ccc;padding-top:30px;border-top:none;}
+.teacher{width:500px;height:220px;overflow:hidden;border:1px solid #ccc;box-sizing:border-box;padding:10px;margin:0 50px 30px;}
+.teacher:nth-child(2n){margin-right:0;}
+.teacher div{width:140px;height:100%;box-sizing:border-box;border:1px solid #dfdfdf;position:relative;float:left;margin-right:10px;overflow:hidden;}
+.teacher img{max-width:100%;max-height:100%;position:absolute;left:50%;bottom:0;transform:translateX(-50%);}
+.teacher h3{font-size:18px;font-weight:bold;line-height:32px;}
+.teacher p{font-size:14px;line-height:2;overflow:hidden;text-overflow:ellipsis;display:-webkit-box;-webkit-line-clamp:6;-webkit-box-orient:vertical;}
