--- a/src/main/resources/templates/home_page/teachers.html
+++ b/src/main/resources/templates/home_page/teachers.html
@@ -8,6 +8,8 @@
 		<title>师资队伍 - 旅游大数据虚拟仿真实验教学平台</title>
 		<link rel="stylesheet" href="../../static/new/css/reset.css" />
 		<link rel="stylesheet" href="../../static/new/css/common.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/bxslider/4.2.15/jquery.bxslider.min.css" />
+
 		<link rel="stylesheet" href="../../static/new/css/teachers.css" />
 	</head>
 	<body>
@@ -43,6 +45,31 @@
 				<div class="current">师资队伍</div>
 				<div class="crumb">当前位置：<a href="/newsinfo/newslist">首页</a> > 师资队伍</div>
 			</div>
+			<div class="lessions-area">
+				<div class="lessions-list">
+					<div class="lessions-slide">
+						<div class="slide">
+							<div class="lession-item active">课程名称1</div>
+						</div>
+						<div class="slide">
+							<div class="lession-item">课程名称2</div>
+						</div>
+						<div class="slide">
+							<div class="lession-item">课程名称3</div>
+						</div>
+						<div class="slide">
+							<div class="lession-item">课程名称4</div>
+						</div>
+						<div class="slide">
+							<div class="lession-item">课程名称5</div>
+						</div>
+						<div class="slide">
+							<div class="lession-item">课程名称6</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="show-bar">《<span>课程名称6</span>》的师资队伍</div>
 			<div class="teachers cl">
 				<div class="teacher" th:each="teacher:${teacherPageInfo.content}">
 					<div><img th:src="@{'/upload/'+${teacher.image_url}}" th:alt="${teacher.person_name}" /></div>
@@ -54,5 +81,17 @@
 		<footer>
 			<p>copyright © 2020 旅游大数据虚拟仿真实验教学平台</p>
 		</footer>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/bxslider/4.2.15/jquery.bxslider.min.js"></script>
+		<script>
+			$(function () {
+				$('.lessions-slide').bxSlider({ pager: false, minSlides: 6, maxSlides: 6, moveSlides: 1, slideWidth: 285, slideMargin: 16 })
+				$('.lession-item').click(function (e) {
+					e.preventDefault()
+					$('.lession-item').removeClass('active')
+					$(this).addClass('active')
+				})
+			})
+		</script>
 	</body>
 </html>
