修改了实验大厅中的提交报告和模块测试提交设置不了状态，修改了实验报告填写后的返回问题

--- a/src/main/resources/templates/shiyan_baogao/bg_student.html
+++ b/src/main/resources/templates/shiyan_baogao/bg_student.html
@@ -46,7 +46,7 @@
 			</div>
 		</div>
 		<div class="report-btns cl">
-			<a href="/expmodel/alltestModel" class="prev-btn">返回</a>
+			<a href="/expmodel/moduleDispathcher" class="prev-btn">返回</a>
 			<div class="print-btn">打印</div>
 			<a th:if="${!collegeReport.getCrTcState()}" th:href="@{|/collegereport/info/${collegeReport.getMid()}|}" class="next-btn">修改</a>
 		</div>
