资源样式更新

--- a/src/main/resources/templates/shouye/dayiMore.html
+++ b/src/main/resources/templates/shouye/dayiMore.html
@@ -68,7 +68,7 @@
                 <a style="float: left" th:text="${studentName}"></a>
             </div>
             <div>
-                <a style="padding-right: 12px;float: right;" th:text="${question.dic_datetime}"></a>
+                <a style="padding-right: 12px;float: right;" th:text="${question.questionDatetime}"></a>
                 <p style="float: right;">提问时间：</p>
             </div>
         </div>
