--- a/src/main/resources/templates/home_page/detaill.html
+++ b/src/main/resources/templates/home_page/detaill.html
@@ -48,7 +48,7 @@
 					<div class="que-info cl">
 						<i>?</i>
 						<h3 th:text="|提问者：${studentName}|"></h3>
-						<p th:text="${question.dic_datetime}"></p>
+						<p th:text="${question.questionDatetime}"></p>
 					</div>
 					<div class="que-con" th:utext="${question.content}"></div>
 				</div>
