--- a/src/main/resources/templates/home_page/question.html
+++ b/src/main/resources/templates/home_page/question.html
@@ -1,135 +1,134 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1" />
-		<meta name="renderer" content="webkit" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>咨询答疑 - 旅游大数据虚拟仿真实验教学平台</title>
-		<link rel="stylesheet" href="../../static/new/css/reset.css" />
-		<link rel="stylesheet" href="../../static/new/css/common.css" />
-		<link rel="stylesheet" href="../../static/new/css/question.css" />
-	</head>
-	<body>
-		<div class="topbar">
-			<div class="main cl">
-				<p>旅游大数据虚拟仿真实验教学平台</p>
-				<div class="user-info" th:if="${session.username} == null">
-					<a href="http://tysf.sctu.edu.cn:8071/sso//login?service=http://172.17.55.112:8889/shiro-cas">登陆</a>
-					<a href="/register">注册</a>
-				</div>
-				<div class="user-info" th:if="${session.username} != null">
-					<span th:text="|欢迎你，${session.username} |"></span>
-					<!--<a th:href="@{/logout}">退出登录</a>-->
-				</div>
-			</div>
-		</div>
-		<div class="navs cl">
-			<div class="logo">
-				<img src="../../static/new/images/sctu.png" />
-				<p>旅游大数据虚拟仿真实验教学平台</p>
-			</div>
-			<ul class="nav">
-				<li><a href="/newsinfo/newslist">首页</a></li>
-				<li><a href="/newsinfo/shiyan">实验大厅</a></li>
-				<li><a href="/setinfo/situation">平台概况</a></li>
-				<li><a href="/teachers/frontList">师资队伍</a></li>
-				<li class="active"><a href="/question/list1">咨询答疑</a></li>
-				<li><a href="/learning/learningList">学习效果</a></li>
-			</ul>
-		</div>
-		<section class="main-area">
-			<div class="bar">
-				<div class="current">咨询答疑</div>
-				<div class="crumb">当前位置：<a href="/newsinfo/newslist">首页</a> > 咨询答疑</div>
-			</div>
-			<div class="questions-filters">
-				<div class="filter-row">
-					<div class="filter-name">时 间：</div>
-					<div class="filter-items">
-						<div class="filter-item active">全部</div>
-						<div class="filter-item">近三天</div>
-						<div class="filter-item">近一周</div>
-						<div class="filter-item">近一月</div>
-						<div class="filter-item">近半年</div>
-						<div class="filter-item">半年前</div>
-					</div>
-				</div>
-				<div class="filter-row">
-					<div class="filter-name">课 程：</div>
-					<div class="filter-items">
-						<div class="filter-item active">全部</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-						<div class="filter-item">某课程</div>
-					</div>
-				</div>
-				<div class="filter-row">
-					<div class="filter-name">状 态：</div>
-					<div class="filter-items">
-						<div class="filter-item active">全部</div>
-						<div class="filter-item">已回答</div>
-						<div class="filter-item">未回答</div>
-					</div>
-				</div>
-			</div>
-			<div class="questions">
-				<h2>提问列表</h2>
-				<div class="question" th:each="question:${questionPageInfo.content}">
-					<div class="que-info cl">
-						<i>?</i>
-						<h3 th:text="|提问者：${question.stu_uname}|">提问者：某某某</h3>
-						<p th:text="${question.dic_datetime}">2020-02-02 12:12</p>
-					</div>
-					<div class="que-con" th:utext="${question.content}"></div>
-					<a th:href="@{|detaill/${question.id}|}" class="to-detail">查看回答</a>
-				</div>
-				<div class="que-pager">
-					<p>第 <span th:text="${questionPageInfo.number}+1">1</span> 页, 共 <span th:text="${questionPageInfo.totalPages}">1</span> 页 <span th:text="${questionPageInfo.totalElements}">1</span> 条</p>
-					<div class="cl" th:if="${questionPageInfo.number gt 0}">
-						<a th:href="@{/question/list1}">首页</a>
-						<a th:href="@{/question/list1(pageNum=${questionPageInfo.hasPrevious()}?${questionPageInfo.number}-1:0)}">上一页</a>
-						<a th:href="@{/question/list1(pageNum=${questionPageInfo.hasNext()}?${questionPageInfo.number}+1:${questionPageInfo.number})}">下一页</a>
-						<a th:href="@{/question/list1(pageNum=${questionPageInfo.totalPages}-1)}">尾页</a>
-					</div>
-				</div>
-			</div>
-			<div class="add-one" th:if="${session.username} != null">
-				<h2>我要提问</h2>
-				<div class="forEditor" id="forEditor"></div>
-				<div class="submit-btn">提 问</div>
-			</div>
-			<div class="add-tip" th:if="${session.username} == null">登录后才可以提问，快去登录吧！</div>
-		</section>
-		<footer>
-			<p>copyright © 2020 旅游大数据虚拟仿真实验教学平台</p>
-		</footer>
-		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
-		<script src="//cdn.staticfile.org/wangEditor/3.1.1/wangEditor.min.js"></script>
-		<script src="//cdn.staticfile.org/layer/3.1.1/layer.min.js"></script>
-		<script src="../../static/new/js/editor.config.js"></script>
-		<script>
-			$('.submit-btn').click(function () {
-				var _data = editor.txt.html()
-				$.post('/question/add', { content: _data }, function (data, textStatus, jqXHR) {
-					window.location.reload()
-				})
-			})
-		</script>
-	</body>
+<head>
+    <meta charset="UTF-8"/>
+    <meta http-equiv="x-ua-compatible" content="IE=edge,chrome=1"/>
+    <meta name="renderer" content="webkit"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>咨询答疑 - 旅游大数据虚拟仿真实验教学平台</title>
+    <link rel="stylesheet" href="../../static/new/css/reset.css"/>
+    <link rel="stylesheet" href="../../static/new/css/common.css"/>
+    <link rel="stylesheet" href="../../static/new/css/question.css"/>
+</head>
+<body>
+<div class="topbar">
+    <div class="main cl">
+        <p>旅游大数据虚拟仿真实验教学平台</p>
+        <div class="user-info" th:if="${session.username} == null">
+            <a href="http://tysf.sctu.edu.cn:8071/sso//login?service=http://172.17.55.112:8889/shiro-cas">登陆</a>
+            <a href="/register">注册</a>
+        </div>
+        <div class="user-info" th:if="${session.username} != null">
+            <span th:text="|欢迎你，${session.username} |"></span>
+            <!--<a th:href="@{/logout}">退出登录</a>-->
+        </div>
+    </div>
+</div>
+<div class="navs cl">
+    <div class="logo">
+        <img src="../../static/new/images/sctu.png"/>
+        <p>旅游大数据虚拟仿真实验教学平台</p>
+    </div>
+    <ul class="nav">
+        <li><a href="/newsinfo/newslist">首页</a></li>
+        <li><a href="/newsinfo/shiyan">实验大厅</a></li>
+        <li><a href="/setinfo/situation">平台概况</a></li>
+        <li><a href="/teachers/frontList">师资队伍</a></li>
+        <li class="active"><a href="/question/list">咨询答疑</a></li>
+        <li><a href="/learning/learningList">学习效果</a></li>
+    </ul>
+</div>
+<section class="main-area">
+    <div class="bar">
+        <div class="current">咨询答疑</div>
+        <div class="crumb">当前位置：<a href="/newsinfo/newslist">首页</a> > 咨询答疑</div>
+    </div>
+    <div class="questions-filters">
+        <!--        <div class="filter-row">-->
+        <!--            <div class="filter-name">时 间：</div>-->
+        <!--            <div class="filter-items">-->
+        <!--                <div class="filter-item active">全部</div>-->
+        <!--                <div class="filter-item"><a-->
+        <!--                        th:href="@{/question/list(day=1)}"><span>近三天</span></a>-->
+        <!--                </div>-->
+        <!--                <div class="filter-item"><a-->
+        <!--                        th:href="@{/question/list(day=2)}"><span>近一周</span></a></div>-->
+        <!--                <div class="filter-item"><a-->
+        <!--                        th:href="@{/question/list(day=3)}"><span>近一月</span></a></div>-->
+        <!--                <div class="filter-item"><a-->
+        <!--                        th:href="@{/question/list(day=4)}"><span>近半年</span></a></div>-->
+        <!--                <div class="filter-item"><a-->
+        <!--                        th:href="@{/question/list(day=5)}"><span>半年前</span></a></div>-->
+        <!--                <input type="hidden" th:value="${day}">-->
+        <!--            </div>-->
+    </div>
+    <div class="filter-row">
+        <div class="filter-name">课 程：</div>
+        <div class="filter-items">
+            <div class="filter-item active">全部</div>
+            <b th:each="courinfor:${courseInfoList}">
+                <!--                    <div class="filter-item"><a th:href="@{|/question/list1(courseId=${courinfor.id})|}">><span-->
+                <div class="filter-item"><a th:href="@{/question/list(courseId=${courinfor.getId()})}"><span
+                        th:text="${courinfor.courseName}">某课程</span></a></div>
+            </b><input type="text" th:value="${courseId}">
+        </div>
+    </div>
+    <div class="filter-row">
+        <div class="filter-name">状 态：</div>
+        <div class="filter-items">
+            <div class="filter-item active">全部</div>
+            <div class="filter-item"><a
+                    th:href="@{/question/list(isreply=1)}">已回答</span></a></div>
+            <div class="filter-item"><a
+                    th:href="@{/question/list(isreply=2)}">未回答</span></a></div>
+            <input type="text" th:value="${isreply}">
+        </div>
+    </div>
+    </div>
+    <div class="questions">
+        <h2>提问列表</h2>
+        <div class="question" th:each="question:${questionPageInfo.content}">
+            <div class="que-info cl">
+                <i>?</i>
+                <h3 th:text="|提问者：${question.stu_uname}|">提问者：某某某</h3>
+                <p th:text="${question.questionDatetime}">2020-02-02 12:12</p>
+            </div>
+            <div class="que-con" th:utext="${question.content}"></div>
+            <a th:if="${question.isreply}" th:href="@{|detaill/${question.id}|}" class="to-detail">查看回答</a>
+        </div>
+        <div class="que-pager">
+            <p>第 <span th:text="${questionPageInfo.number}+1">1</span> 页, 共 <span
+                    th:text="${questionPageInfo.totalPages}">1</span> 页 <span
+                    th:text="${questionPageInfo.totalElements}">1</span> 条</p>
+            <div class="cl" th:if="${questionPageInfo.number gt 0}">
+                <a th:href="@{/question/list}">首页</a>
+                <a th:href="@{/question/list(pageNum=${questionPageInfo.hasPrevious()}?${questionPageInfo.number}-1:0)}">上一页</a>
+                <a th:href="@{/question/list(pageNum=${questionPageInfo.hasNext()}?${questionPageInfo.number}+1:${questionPageInfo.number})}">下一页</a>
+                <a th:href="@{/question/list(pageNum=${questionPageInfo.totalPages}-1)}">尾页</a>
+            </div>
+        </div>
+    </div>
+    <div class="add-one" th:if="${session.stuName} != null">
+        <h2>我要提问</h2>
+        <div class="forEditor" id="forEditor"></div>
+        <div class="submit-btn">提 问</div>
+    </div>
+    <div class="add-tip" th:if="${session.stuName} == null">登录后才可以提问，快去登录吧！</div>
+</section>
+<footer>
+    <p>copyright © 2020 旅游大数据虚拟仿真实验教学平台</p>
+</footer>
+<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+<script src="//cdn.staticfile.org/wangEditor/3.1.1/wangEditor.min.js"></script>
+<script src="//cdn.staticfile.org/layer/3.1.1/layer.min.js"></script>
+<script src="../../static/new/js/editor.config.js"></script>
+<script>
+    $('.submit-btn').click(function () {
+        var _data = editor.txt.html()
+        $.post('/question/add', {content: _data}, function (data, textStatus, jqXHR) {
+            window.location.reload()
+        })
+    })
+</script>
+</body>
 </html>
