--- a/src/main/resources/templates/home_page/situation.html
+++ b/src/main/resources/templates/home_page/situation.html
@@ -34,7 +34,7 @@
 				<li><a href="/newsinfo/shiyan">实验大厅</a></li>
 				<li class="active"><a href="/setinfo/situation">平台概况</a></li>
 				<li><a href="/teachers/frontList">师资队伍</a></li>
-				<li><a href="/question/list1">咨询答疑</a></li>
+				<li><a href="/question/list">咨询答疑</a></li>
 				<li><a href="/learning/learningList">学习效果</a></li>
 			</ul>
 		</div>
