--- a/src/main/resources/templates/kuangjia/shiyan.html
+++ b/src/main/resources/templates/kuangjia/shiyan.html
@@ -37,7 +37,11 @@
 							<a class="to-url" data-url="/kaoshi/-1/toExamPageList"><i class="layui-icon layui-icon-survey"></i>理论测试</a>
 						</li>
 						<li class="layui-nav-item">
-							<a class="to-url" data-url="/grade/score"><i class="layui-icon layui-icon-vercode"></i>实验成绩</a>
+							<a href="javascript:;"><i class="layui-icon layui-icon-vercode"></i>实验成绩</a>
+							<dl class="layui-nav-child">
+								<dd><a class="to-url" data-url="/grade/score" href="javascript:;">当前课程成绩</a></dd>
+								<dd><a class="to-url" data-url="/grade/score/old" href="javascript:;">往期课程成绩</a></dd>
+							</dl>
 						</li>
 						<li class="layui-nav-item">
 							<a class="to-url" data-url="/setinfo/jiesao"><i class="layui-icon layui-icon-read"></i>操作说明</a>
@@ -49,20 +53,20 @@
 				</div>
 			</div>
 			<div class="layui-body">
-                <iframe src="about:blank" id="iframe" frameborder="0" width="100%" height="100%"></iframe>
-            </div>
+				<iframe src="about:blank" id="iframe" frameborder="0" width="100%" height="100%"></iframe>
+			</div>
 		</div>
-        <script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
 		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
 		<script>
 			$(function () {
-                $('.to-url').click(function (e) {
-                    e.preventDefault();
-                    if ($(this).data('url')) {
-                        $('#iframe').attr('src', $(this).data('url'));
-                    }
-                });
-            })
+				$('.to-url').click(function (e) {
+					e.preventDefault()
+					if ($(this).data('url')) {
+						$('#iframe').attr('src', $(this).data('url'))
+					}
+				})
+			})
 		</script>
 	</body>
 </html>
